--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "test": "npm run lint"
+    "test": "npm run lint",
+    "update:version": "npm --no-git-tag-version version"
   },
   "repository": {
     "type": "git",
