--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,8 @@ name: Release
 
 on:
   release:
-   types:
-    - published
+    types:
+      - published
 
 env:
   FORCE_COLOR: 3
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: read
+      contents: write
 
     steps:
       - name: Get version from tag
@@ -46,6 +46,6 @@ jobs:
 
       - run: npm test
 
-      - run: npm whoami && npm --ignore-scripts publish
+      - run: npm whoami && npm --ignore-scripts publish --access public
         env:
-         NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
