--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "url": "https://github.com/rezstream/eslint-plugin-rezstream/issues"
   },
   "homepage": "https://rezstream.com/rezstream/eslint-plugin-github#readme",
-  "devDependencies": {
-    "@types/eslint": "^8.4.10",
-    "eslint": "^8.31.0",
+  "dependencies": {
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-unicorn": "^45.0.2",
     "eslint-plugin-wc": "^1.4.0"
+  },
+  "devDependencies": {
+    "@types/eslint": "^8.4.10",
+    "eslint": "^8.31.0"
   },
   "peerDependencies": {
     "eslint": "^8.25.0"
