--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "homepage": "https://rezstream.com/rezstream/eslint-plugin-github#readme",
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.1.0",
+    "@typescript-eslint/parser": "^5.1.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-unicorn": "^45.0.2",
     "eslint-plugin-wc": "^1.4.0"
