Include provenance when publishing

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,6 +46,6 @@ jobs:
 
       - run: npm test
 
-      - run: npm whoami && npm --ignore-scripts publish --access public
+      - run: npm whoami && npm --ignore-scripts publish --access public --provenance
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
