--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,3 +10,11 @@ updates:
     schedule:
       interval: "weekly"
     versioning-strategy: "increase"
+    groups:
+      eslint:
+        patterns:
+          - "@types/eslint"
+          - "eslint"
+      typescript-eslint:
+        patterns:
+          - "@typescript-eslint/*"
