--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "@rezstream/eslint-plugin",
   "description": "An opinionated collection of ESLint shared configs and rules used by rezStream",
   "version": "1.5.0",
+  "type": "module",
   "main": "lib/index.js",
   "files": [
     "lib/*"
   ],
   "scripts": {
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "test": "npm run lint",
+    "inspect": "eslint --flag unstable_ts_config --inspect-config",
+    "lint": "eslint --flag unstable_ts_config",
+    "lint:fix": "npm run eslint -- --fix",
+    "test": "tsc --noEmit && npm run lint",
     "update:version": "npm --no-git-tag-version version"
   },
   "repository": {
@@ -23,17 +25,23 @@
   },
   "homepage": "https://rezstream.com/rezstream/eslint-plugin-github#readme",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
-    "eslint-config-airbnb-base": "^15.0.0",
+    "@stylistic/eslint-plugin": "^2.12.1",
     "eslint-plugin-unicorn": "^56.0.1",
     "eslint-plugin-wc": "^2.2.0"
   },
   "devDependencies": {
-    "@types/eslint": "^8.56.5",
-    "eslint": "^8.57.0"
+    "@eslint/config-inspector": "^0.6.0",
+    "@eslint/core": "^0.9.1",
+    "@eslint/js": "^9.16.0",
+    "@types/eslint__js": "^8.42.3",
+    "@types/node": "^22.10.2",
+    "eslint": "^9.16.0",
+    "globals": "^15.13.0",
+    "jiti": "^2.4.1",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.18.0"
   },
   "peerDependencies": {
-    "eslint": "^8.38.0"
+    "eslint": "^9.0.0"
   }
 }
