--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
           - macos-latest
           - ubuntu-latest
           - windows-latest
+          - ubuntu-24.04-arm
+          - windows-11-arm
 
     steps:
       - name: Check out repository
