--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,6 +47,6 @@ jobs:
 
       - run: npm test
 
-      - run: npm whoami && npm --ignore-scripts publish --access public --provenance
+      - run: npm whoami && npm --ignore-scripts publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
